[gd_scene load_steps=5 format=3 uid="uid://baabjk2sesuiw"]

[ext_resource type="Texture2D" uid="uid://cii37ffppbca" path="res://Art/32x32_white_square.png" id="1_puwrh"]
[ext_resource type="Script" path="res://Scenes/Interface/upgrade_option.gd" id="1_qeyeh"]
[ext_resource type="Shader" path="res://Scenes/Units/shine.gdshader" id="1_visa4"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rwth2"]
shader = ExtResource("1_visa4")
shader_parameter/shine_color = Color(1, 1, 1, 0.25)
shader_parameter/line_width = 0.1
shader_parameter/angle = 0.785398
shader_parameter/speed = 1.0
shader_parameter/wait_cycles = 2.0

[node name="OptionButton" type="TextureButton"]
self_modulate = Color(0, 0, 0, 1)
material = SubResource("ShaderMaterial_rwth2")
custom_minimum_size = Vector2(200, 70)
offset_right = 200.0
offset_bottom = 70.0
texture_normal = ExtResource("1_puwrh")
stretch_mode = 0
script = ExtResource("1_qeyeh")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
offset_right = 200.0
offset_bottom = 10.0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ItemIcon" type="TextureRect" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("1_puwrh")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NameLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 12
text = "Name"
vertical_alignment = 1

[node name="InfoLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "stat changes............................................................"
vertical_alignment = 1
autowrap_mode = 1

[node name="HoverShade" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(1, 1, 1, 0.0705882)

[node name="PressedShade" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0, 0, 0, 0.721569)

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
